force-app/main/default/objects/Contact/fields/DSCORGPKG__Company_HQ_Country_Full_Name__c.field-meta.xml
<CustomField>
    <fullName>DSCORGPKG__Company_HQ_Country_Full_Name__c</fullName>
    <label>Company HQ Country (Full Name)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>