force-app/main/default/objects/Contact/fields/DSCORGPKG__Company_HQ_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>DSCORGPKG__Company_HQ_Postal_Code__c</fullName>
    <label>Company HQ Postal Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>