force-app/main/default/objects/Contact/fields/DSCORGPKG__Conflict__c.field-meta.xml
<CustomField>
    <fullName>DSCORGPKG__Conflict__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Conflict</label>
    <referenceTo>DSCORGPKG__Conflict__c</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>