force-app/main/default/objects/Contact/fields/DSCORGPKG__DeletedFromDiscoverOrg__c.field-meta.xml
<CustomField>
    <fullName>DSCORGPKG__DeletedFromDiscoverOrg__c</fullName>
    <label>DeletedFromDiscoverOrg</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>false</fullName>
                <default>true</default>
                <label>false</label>
            </value>
            <value>
                <fullName>true</fullName>
            </value>
            <value>
                <fullName>GDPR Opt-Out</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>