force-app/main/default/objects/Contact/fields/DSCORGPKG__DiscoverOrg_FullCountryName__c.field-meta.xml
<CustomField>
    <fullName>DSCORGPKG__DiscoverOrg_FullCountryName__c</fullName>
    <label>DiscoverOrg Country Full Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>