force-app/main/default/objects/Contact/fields/DSCORGPKG__DiscoverOrg_ID__c.field-meta.xml
<CustomField>
    <fullName>DSCORGPKG__DiscoverOrg_ID__c</fullName>
    <label>DiscoverOrg ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>