force-app/main/default/objects/Contact/fields/DSCORGPKG__Email_Invalid__c.field-meta.xml
<CustomField>
    <fullName>DSCORGPKG__Email_Invalid__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Email Invalid</label>
    <type>Checkbox</type>
</CustomField>