force-app/main/default/objects/Contact/fields/DSCORGPKG__Management_Level__c.field-meta.xml
<CustomField>
    <fullName>DSCORGPKG__Management_Level__c</fullName>
    <label>Management Level</label>
    <length>255</length>
    <type>Text</type>
</CustomField>