force-app/main/default/objects/Contact/fields/DSCORGPKG__NickName__c.field-meta.xml
<CustomField>
    <fullName>DSCORGPKG__NickName__c</fullName>
    <label>NickName</label>
    <length>25</length>
    <type>Text</type>
</CustomField>