force-app/main/default/objects/Contact/fields/DSCORGPKG__title_Custom__c.field-meta.xml
<CustomField>
    <fullName>DSCORGPKG__title_Custom__c</fullName>
    <label>title_Custom</label>
    <type>TextArea</type>
</CustomField>