force-app/main/default/objects/Contact/recordTypes/testing.recordType-meta.xml
<RecordType>
    <fullName>testing</fullName>
    <active>true</active>
    <label>testing</label>
</RecordType>